fix: fix prob;em with shift

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -31,7 +31,7 @@ body{
   font-size: 1.8rem;
   line-height: 2.0rem;
   resize: vertical;
-  max-height: 350px;
+  max-height: 250px;
   transition: 0.2s;
 }
 
